Fixed issue with horizontal overflow on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,7 @@ button {
 
 input {
     padding: 0.5rem;
+    max-width: 100%;
 }
 
 button {
